--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "workflowDify": "node ./workflow/dify.js"
   },
-  "author": "",
+  "author": "Leo_chen",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
-    "dify-client": "^2.3.2",
     "nodemailer": "^6.9.16"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leochen-g/dify-schedule.git"
+  },
+  "bugs": {
+    "url": "https://github.com/leochen-g/dify-schedule/issues"
+  },
+  "homepage": "https://github.com/leochen-g/dify-schedule#readme"
 }
