--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -26,11 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'
-          cache: 'yarn'
+      - uses: actions/setup-node@v2
       - name: Run Project
         run: |
           yarn
